<resources>
    <string name="app_name">SenVote</string>
    <string name="activity_title">SenVote: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="error"><![CDATA[<b>Error %1$d (%2$s)</b>: %3$s]]></string>
    <string name="success"><![CDATA[<b>Success:</b>: %1$s]]></string>
    <string name="dismiss">Dismiss</string>

    <string name="dashboard_header">Welcome to SenVote, %1$s!</string>
    <string name="sign_out">Sign Out</string>
    <string name="inactive_warning"><![CDATA[<b>Warning</b>: Your account is labelled as <b>inactive</b>. You will not be able to participate in any active divisions%1$s]]></string>
    <string name="division_list">View Division List</string>
    <string name="active_divisions">View Active Divisions</string>
    <string name="admin_list">SenVote Administration</string>
    <string name="add_user">Add a User</string>
    <string name="edit_user">Edit an Existing User</string>
    <string name="delete_user">Delete an Existing User</string>
    <string name="add_division">Add a Division</string>
    <string name="edit_division">Edit an Existing Division</string>
    <string name="delete_division">Delete an Existing Division</string>

    <string name="to_dashboard">Return to Dashboard</string>
    <string name="name">Name:</string>
    <string name="confirm">Confirm Password:</string>
    <string name="access">Access Level:</string>
    <string name="active">Account Status:</string>
    <string name="add_user2">Add User</string>
    <string-array name="access_list">
        <item>Standard User</item>
        <item>Administrative User</item>
    </string-array>
    <string-array name="status_list">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>

    <string name="delete_warning"><![CDATA[<b>Warning</b>: Deleting a SenVote account is permanent and cannot be undone. All votes made by the account being deleted will be removed from SenVote.]]></string>
    <string name="user_to_delete">User to Delete:</string>
    <string name="delete_user2">Delete User</string>
    <string name="confirm_delete_title">Are you Sure?</string>
    <string name="yes">Yes, Delete</string>
    <string name="no">No, Cancel</string>

</resources>